--- a/src/main/resources/templates/upload-img-user.html
+++ b/src/main/resources/templates/upload-img-user.html
@@ -15,7 +15,7 @@
   <body>
   <!-- FORMULAIRE : -->
 
-    <form class="form-signin" enctype="multipart/form-data"  action="/file/upload" method="POST">
+    <form class="form-signin" enctype="multipart/form-data"  action="/file/upload/user" method="POST">
 
       <img class="img" th:src="'/images/profil/' + ${userConnected.uuid} + '.jpg'" style="border-radius: 50%" width="100" height="100"/>
 
