--- a/src/main/resources/templates/groupe-accueil.html
+++ b/src/main/resources/templates/groupe-accueil.html
@@ -19,6 +19,9 @@
             </ul>
             <ul>
                 <li>
+                    <a href="/user/accueil" class="gry_btn">Revenir à ma page utilisateur</a>
+                </li>
+                <li>
                     <a href="/login" class="gry_btn">Connection</a>
                 </li>
                 <li>
@@ -32,6 +35,20 @@
             </ul>
         </nav>
     </header>
+
+    <div class="container_info">
+            <div class="btn_user">               
+                    <img class="img" alt="Aucune photo de profil" th:src="'/images/profil/' + ${userConnected.uuid} + '.jpg'"/>                
+                <span class="txt_btn_name" th:text="${userConnected.login}"></span>
+            </div>
+            <div class="btn_user">
+                <a th:href="'/file/upload/groupe?id=' + ${groupe.uuid}" title="Changer la photo du groupe">
+                    <img class="img" alt="Aucune photo de groupe" th:src="'/images/groupe/' + ${groupe.uuid} + '.jpg'"/>
+                </a> 
+                <span class="txt_btn_name" th:text="${groupe.nom}"></span>
+            </div>
+        </div>    
+
     <div class="big-container">
         <div class="container">
             <div class="new_groupe">
@@ -43,23 +60,16 @@
                     </form>
             </div>
             <div class="card_groupe"> 
-                <!-- <div class="box_groupe" th:each="groupe : ${groupes}">
-                        <a class="txt_btn" href="/groupe/accueil"> 
-                            <p class="txt_btn" th:text="${groupe.nom}"/> 
-                        </a> 
+                <div class="box_groupe" th:each="user : ${groupe.users}">
+                    <img class="img_groupe" alt="Aucune photo de profil" th:src="'/images/profil/' + ${userConnected.uuid} + '.jpg'"/> 
+                            <p class="txt_btn" th:text="${user.login}"/>   
                         <i class="icon fa fa-bars"></i>
-                </div> -->
+                </div>
             </div>
         </div>
-
-        <div class="container_game">
-            <div class="btn_user">
-                <a href="/file/upload" title="Changer de photo de profil">
-                    <img class="img" alt="Aucune photo de profil" th:src="'/images/profil/' + ${userConnected.uuid} + '.jpg'"/>
-                </a>
-                <span class="txt_btn_name" th:text="${userConnected.login}"></span>
-            </div>
-            <div class="card_game">
+        <div class="container_game">    
+            <div class="card_game_commu">
+                <h2 class="txt_game_commu">Jeux de la communauté :</h2>
                 <div class="box_game">
                     <table class="table">
                         <thead>
@@ -79,7 +89,9 @@
             
                                 <td>
                                     <div><a type="button" class="txt_btn_table"
-                                        th:href="'/game/add?id=' + ${game.id}">ajouter à mes jeux</a></div>
+                                        th:href="'/game/add?id=' + ${game.id}">ajouter aux jeux du groupe</a></div>
+                                    <div><a type="button" class="txt_btn_table"
+                                        th:href="'/game/newEvent?id=' + ${game.id}">Créer un event pour ce jeux</a></div>
                                     <!-- <div sec:authorize="hasAuthority('ADMIN')"><a type="button" class="txt_btn_table"
                                             th:href="'/game/admin/edit?id=' + ${game.id}">éditer</a></div>
                                     <div sec:authorize="hasAuthority('ADMIN')"><a type="button" class="txt_btn_table"
