Work on invitation groupe / user

--- a/src/main/resources/templates/user-accueil.html
+++ b/src/main/resources/templates/user-accueil.html
@@ -19,6 +19,9 @@
             </ul>
             <ul>
                 <li>
+                    <a href="/user/accueil/invitation" class="gry_btn">Voir mes invitations</a>
+                </li>
+                <li>
                     <a href="/login" class="gry_btn">Connection</a>
                 </li>
                 <li>
